apps/ntfy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  revisionHistoryLimit: 1
  replicas: 1
  template:
    metadata:
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.5.0
          args: ["serve"]
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
                  cpu: 150m
                  memory: 150Mi
          volumeMounts:
              - mountPath: /etc/ntfy/server.yml
                subPath: server.yml
                name: config
              - mountPath: /data
                name: data
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5

      volumes:
        - name: config
          configMap:
            name: ntfy-config
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-data
