apps/ntfy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
