apps/ntfy/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name:  ntfy
                port:
                  name: http
  tls:
    - hosts:
        - ""
      secretName: ntfy-tls
